- bios/machine.c: Set correct value in _FDC cookie. (RFB)
- bios/floppy.c include/asm.h: Use calibrated delay loop for floppy register
  access. (RFB)
- bios/floppy.c: Code cleanup: update comments re floppy track format. (RFB)

2012-12-03
- bios/blkdev.c bios/blkdev.h bios/floppy.c bios/floppy.h: Code cleanup:
  reorganise media change handling for floppies. (RFB)

2012-12-06
- bios/blkdev.c bios/blkdev.h bios/floppy.c: Protobt(): add new disk types
  and fix checksum & serial number. (RFB)

2012-12-10
- bios/blkdev.c bios/dma.h bios/floppy.c: Add support for HD floppy disks
  as indicated by _FDC cookie. (RFB)

2012-12-11
- bios/floppy.c bios/floppy.h bios/xbios.c: Flopfmt() now supports the
  skew array introduced in TOS 1.04. (RFB)
- bios/floppy.c: Flopfmt() now supports interleave. (RFB)

2012-12-13
- bios/acsi.c bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c
  bios/ide.c bios/xhdi.c: Code cleanup: #define physical sector size in
  one place. (RFB)
- bios/floppy.c: Fix compile errors when MACHINE_AMIGA is defined. (RFB)
- bios/disk.c bios/disk.h: Tidy up code format, variable names etc. (RFB)

2012-12-15
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c bios/xhdi.c:
  Code cleanup: replace magic number 2 with NUMFLOPPIES. (RFB)

2012-12-18
- bios/bios.c: Fixed wrong charset in multilanguage builds when the _AKP
  cookie is initialized from the NVRAM (ex: wrong Spanish accents). (VRI)
- bios/serport.c: Fixed compilation warnings with "make aranym". (VRI)

2012-12-19
- bios/delay.c: Use __mcoldfire__ instead of MACHINE_FIREBEE. (RFB)
- bios/bios.c: Fixed regression on default interrupt handlers. At least
  ARAnyM's network and fVDI driver requires INT3 handler to be initialized
  with a simple RTE, otherwise they crashes with "Exception number 27". (VRI)
- bios/*: Use again 0xffffxxxx instead of 0x00ffxxxx to access I/O registers.
  The hardware supports both, but 0xffffxxxx allows the .w optimization. (VRI)